--- a/nginx.conf
+++ b/nginx.conf
@@ -15,8 +15,8 @@ http {
       root /var/www/gitlist;
       index index.php;
 
-#   auth_basic "Restricted";
-#   auth_basic_user_file .htpasswd;
+      auth_basic "Restricted";
+      auth_basic_user_file /auth/.htpasswd;
 
       location = /robots.txt {
           allow all;
